--- a/index.html
+++ b/index.html
@@ -15,18 +15,57 @@
     <link rel="stylesheet" type="text/css" href="public/style.css">
 </head>
 <body>
-<div id="app">
+<div id="app" v-cloak>
     <div class="header">
         <h1>Vue.js Poster Store</h1>
+        <form class="searchbar" v-on:submit.prevent="onSubmit">
+          <input v-model="newSearch" placeholder="Search for posters" type="text" name="" value="">
+          <input type="submit" name="" value="search" class="btn">
+        </form>
     </div>
     <div class="main">
         <div class="products">
-            <p>Products go here.</p>
+            <div v-if="loading">
+              Loading...
+            </div>
+            <div v-else class="search-results">
+              Found {{ results.length }} results for the search term {{ lastSearch }}
+            </div>
+            <div class="product" v-for="(item, index) in items" :key="item.id">
+              <div class="product-image">
+                <img :src=item.link :alt=item.title>
+              </div>
+              <div class="">
+                <h4 class="product-title">{{ item.title }}</h4>
+                <p><strong>Price: {{ price | currency }}</strong></p>
+                <button class="add-to-cart btn" v-on:click="addItem(index)">Add to cart</button>
+              </div>
+            </div>
+            <div id="product-list-bottom">
+              <div v-if="noMoreItems">
+                No more items
+              </div>
+            </div>
         </div>
         <div class="cart">
             <h2>Shopping Cart</h2>
-            <div>
-                No items in the cart.
+            <transition-group name="fade" tag="ul">
+              <li class="cart-item" v-for="item in cart" :key="item.id">
+                <div class="item-title">{{ item.title }}</div>
+                <span class="item-qty">{{ item.price | currency }} x {{ item.qty }}</span>
+                <button class="btn" v-on:click="inc(item)">+</button>
+                <button class="btn" v-on:click="dec(item)">-</button>
+              </li>
+            </transition-group>
+            <transition name="fade">
+              <div v-if="cart.length">
+                <div>
+                  Total: {{ total | currency }}
+                </div>
+              </div>
+            </transition>
+            <div v-if="!cart.length" class="empty-cart">
+              No items in the cart.
             </div>
         </div>
     </div>
@@ -34,6 +73,9 @@
 
 <!-- Scripts -->
 <script src="/reload/reload.js"></script>
+<script src="node_modules/vue/dist/vue.js"></script>
+<script src="node_modules/vue-resource/dist/vue-resource.js"></script>
+<script src="node_modules/scrollmonitor/scrollMonitor.js"></script>
 <script type="text/javascript" src="public/script.js"></script>
 
 </body>
